# Game_Framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
include/: framework.hpp  types.hpp  utils.hpp  window.h
src/: framework.cpp  main.cpp  utils.cpp
